--- a/09 - Tugas Text Preprocessing/text-preprocessing-code.ipynb
+++ b/09 - Tugas Text Preprocessing/text-preprocessing-code.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +210,7 @@
        "      <th>score</th>\n",
        "      <th>at</th>\n",
        "      <th>appVersion</th>\n",
+       "      <th>sentiment</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -220,6 +221,7 @@
        "      <td>1</td>\n",
        "      <td>2022-01-21 10:52:12</td>\n",
        "      <td>4.9.3</td>\n",
+       "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -228,6 +230,7 @@
        "      <td>3</td>\n",
        "      <td>2021-11-30 15:40:38</td>\n",
        "      <td>4.9.3</td>\n",
+       "      <td>Neutral</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -236,6 +239,7 @@
        "      <td>4</td>\n",
        "      <td>2021-11-29 22:58:12</td>\n",
        "      <td>4.9.3</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -244,6 +248,7 @@
        "      <td>1</td>\n",
        "      <td>2022-09-03 15:21:17</td>\n",
        "      <td>4.9.3</td>\n",
+       "      <td>Negative</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -252,46 +257,7 @@
        "      <td>5</td>\n",
        "      <td>2022-01-15 10:05:27</td>\n",
        "      <td>4.9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Arlan Ramlan</td>\n",
-       "      <td>Bagus</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2022-02-01 05:50:40</td>\n",
-       "      <td>4.9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Slamet Hariyanto</td>\n",
-       "      <td>Coba dulu</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-12-10 22:40:45</td>\n",
-       "      <td>4.9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Hasan Thio</td>\n",
-       "      <td>Ok</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2022-02-01 03:07:45</td>\n",
-       "      <td>4.9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>RAFI BADZLIN</td>\n",
-       "      <td>Gimana ini kak pin saya salah terus padahal ud...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-12-17 08:56:52</td>\n",
-       "      <td>4.9.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>mariyadi qc</td>\n",
-       "      <td>Biar aman kamu tidak bisa pakai gojek Jadi say...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2022-02-09 11:27:38</td>\n",
-       "      <td>4.9.3</td>\n",
+       "      <td>Positive</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -304,33 +270,23 @@
        "2  Anisa Suci Rahmayuliani  Kenapa sih dari kemarin sy buka aplikasi gojek...   \n",
        "3             naoki yakuza  Baru download gojek dan hape baru trus ditop u...   \n",
        "4            Trio Sugianto                                             Mantap   \n",
-       "5             Arlan Ramlan                                              Bagus   \n",
-       "6         Slamet Hariyanto                                          Coba dulu   \n",
-       "7               Hasan Thio                                                 Ok   \n",
-       "8             RAFI BADZLIN  Gimana ini kak pin saya salah terus padahal ud...   \n",
-       "9              mariyadi qc  Biar aman kamu tidak bisa pakai gojek Jadi say...   \n",
        "\n",
-       "   score                   at appVersion  \n",
-       "0      1  2022-01-21 10:52:12      4.9.3  \n",
-       "1      3  2021-11-30 15:40:38      4.9.3  \n",
-       "2      4  2021-11-29 22:58:12      4.9.3  \n",
-       "3      1  2022-09-03 15:21:17      4.9.3  \n",
-       "4      5  2022-01-15 10:05:27      4.9.3  \n",
-       "5      4  2022-02-01 05:50:40      4.9.3  \n",
-       "6      2  2021-12-10 22:40:45      4.9.3  \n",
-       "7      5  2022-02-01 03:07:45      4.9.3  \n",
-       "8      1  2022-12-17 08:56:52      4.9.3  \n",
-       "9      1  2022-02-09 11:27:38      4.9.3  "
+       "   score                   at appVersion sentiment  \n",
+       "0      1  2022-01-21 10:52:12      4.9.3  Negative  \n",
+       "1      3  2021-11-30 15:40:38      4.9.3   Neutral  \n",
+       "2      4  2021-11-29 22:58:12      4.9.3  Positive  \n",
+       "3      1  2022-09-03 15:21:17      4.9.3  Negative  \n",
+       "4      5  2022-01-15 10:05:27      4.9.3  Positive  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Melihat 10 baris awal dari dataset\n",
-    "data.head(10)"
+    "data.head()"
    ]
   },
   {
@@ -629,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Visualisasi Review Berdasarkan Score"
+    "### 3. Visualisasi Review Berdasarkan Score (Rating)"
    ]
   },
   {
