Update scraping targets in notebooks for Telkom University and Universitas Pertamina

--- a/11_UAS/code/scraping/TelU_Reviews_Scraping.ipynb
+++ b/11_UAS/code/scraping/TelU_Reviews_Scraping.ipynb
@@ -31,7 +31,7 @@
    "outputs": [],
    "source": [
     "# API_KEY= \n",
-    "# Target scraping: IT PLN Reviews\n",
+    "# Target scraping: Telkom University Reviews\n",
     "# Site: \n",
     "# Data id: "
    ]
