--- a/11_UAS/code/scraping/UPer_Reviews_Scraping .ipynb
+++ b/11_UAS/code/scraping/UPer_Reviews_Scraping .ipynb
@@ -31,9 +31,9 @@
    "outputs": [],
    "source": [
     "# API_KEY= \n",
-    "# Target scraping: IT PLN Reviews\n",
-    "# Site: \n",
-    "# Data id: "
+    "# Target scraping: Universitas Pertamina Reviews\n",
+    "# Site: https://www.google.com/maps/place/Universitas+Pertamina/@-6.2285507,106.7864025,17z/data=!4m8!3m7!1s0x2e69f13094c83677:0x1f4300031365732b!8m2!3d-6.2285507!4d106.7889774!9m1!1b1!16s%2Fg%2F11c3x30f9b?hl=id&entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D\n",
+    "# Data id: 0x2e69f13094c83677:0x1f4300031365732b"
    ]
   },
   {
@@ -57,8 +57,8 @@
    "outputs": [],
    "source": [
     "# define the API key and data id\n",
-    "API_KEY = \"\"\n",
-    "data_id = \"\"\n",
+    "API_KEY = \"fe98a340df14b43c8aa15de61d95eed9ee64fb8ec990da10b7642a3810892ca7\"\n",
+    "data_id = \"0x2e69f13094c83677:0x1f4300031365732b\"\n",
     "\n",
     "# define the search parameters\n",
     "params = {\n",
