Add comment to define output directory and file name in scraping template

--- a/11_UAS/code/scraping/Scraping_template.ipynb
+++ b/11_UAS/code/scraping/Scraping_template.ipynb
@@ -60,6 +60,7 @@
     "API_KEY = \"\"\n",
     "data_id = \"\"\n",
     "\n",
+    "# define the output directory and file name\n",
     "output_dir = \"../../dataset\"\n",
     "output_name = \"\"\n",
     "\n",
