Add clarification comment for data_id in scraping template

--- a/11_UAS/code/scraping/Scraping_template.ipynb
+++ b/11_UAS/code/scraping/Scraping_template.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# define the API key and data id\n",
     "API_KEY = \"\"\n",
-    "data_id = \"\"\n",
+    "data_id = \"\" # place id data located inside Google Maps Place URL: located inside `data=` query parameter.\n",
     "\n",
     "# define the output directory and file name\n",
     "output_dir = \"../../dataset\"\n",
