Update UPer reviews scraping notebook with detailed comments and output file configuration

--- a/11_UAS/code/scraping/UPer_Reviews_Scraping .ipynb
+++ b/11_UAS/code/scraping/UPer_Reviews_Scraping .ipynb
@@ -58,7 +58,11 @@
    "source": [
     "# define the API key and data id\n",
     "API_KEY = \"fe98a340df14b43c8aa15de61d95eed9ee64fb8ec990da10b7642a3810892ca7\"\n",
-    "data_id = \"0x2e69f13094c83677:0x1f4300031365732b\"\n",
+    "data_id = \"0x2e69f13094c83677:0x1f4300031365732b\" # place id data located inside Google Maps Place URL: located inside `data=` query parameter.\n",
+    "\n",
+    "# define the output directory and name\n",
+    "output_dir = \"../../dataset\"\n",
+    "output_name = \"UPer_reviews.csv\"\n",
     "\n",
     "# define the search parameters\n",
     "params = {\n",
@@ -115,11 +119,10 @@
     "print(json.dumps(reviews, indent=2, ensure_ascii=False))\n",
     "df = pd.DataFrame(reviews)\n",
     "# Ensure the directory exists\n",
-    "output_dir = \"../../dataset\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Save the dataframe to a CSV file\n",
-    "df.to_csv(os.path.join(output_dir, \"IT_PLN_Reviews.csv\"), index=False)"
+    "df.to_csv(os.path.join(output_dir, output_name), index=False)"
    ]
   }
  ],
