Enhance IT PLN Reviews Scraping notebook with output file configuration and comments for clarity

--- a/11_UAS/code/scraping/IT_PLN_Reviews_Scraping.ipynb
+++ b/11_UAS/code/scraping/IT_PLN_Reviews_Scraping.ipynb
@@ -6174,7 +6174,12 @@
    ],
    "source": [
     "API_KEY = \"8ad99b53192a9e2d79205b48516c9d66e4aef15e48b085d799dc0d3d8a525fb3\"\n",
-    "data_id = \"0x2e69f788f60e492d:0x8b5ed89a85136510\"\n",
+    "data_id = \"0x2e69f788f60e492d:0x8b5ed89a85136510\" # place id data located inside Google Maps Place URL: located inside `data=` query parameter.\n",
+    "\n",
+    "# define the output directory and file name\n",
+    "output_dir = \"../../dataset\"\n",
+    "output_name = \"IT_PLN_Reviews.csv\"\n",
+    "\n",
     "\n",
     "# define the search parameters\n",
     "params = {\n",
@@ -6231,11 +6236,10 @@
     "print(json.dumps(reviews, indent=2, ensure_ascii=False))\n",
     "df = pd.DataFrame(reviews)\n",
     "# Ensure the directory exists\n",
-    "output_dir = \"../../dataset\"\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Save the dataframe to a CSV file\n",
-    "df.to_csv(os.path.join(output_dir, \"IT_PLN_Reviews.csv\"), index=False)"
+    "df.to_csv(os.path.join(output_dir, output_name), index=False)"
    ]
   }
  ],
