Fix file extension in data loading path in preprocessing template

--- a/11_UAS/code/preprocessing/Preprocessing_template.ipynb
+++ b/11_UAS/code/preprocessing/Preprocessing_template.ipynb
@@ -155,7 +155,7 @@
     "import pandas as pd\n",
     "import string\n",
     "import re\n",
-    "df = pd.read_csv('../../dataset/############')\n",
+    "df = pd.read_csv('../../dataset/############.csv')\n",
     "\n",
     "output_path = '../../dataset/cleaned-data/############_cleaned.csv'\n",
     "\n",
