Add title section to Telkom University Reviews scraping notebook

--- a/11_UAS/code/scraping/TelU_Reviews_Scraping.ipynb
+++ b/11_UAS/code/scraping/TelU_Reviews_Scraping.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Scraping | Telkom University (Bandung)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Prerequists"
    ]
   },
