Fix file path for reading CyberU reviews dataset in LDA-CyberU notebook

--- a/11_UAS/code/modelling/CyberU/LDA-CyberU.ipynb
+++ b/11_UAS/code/modelling/CyberU/LDA-CyberU.ipynb
@@ -26,7 +26,7 @@
     "import ast\n",
     "\n",
     "# Baca dataset\n",
-    "df = pd.read_csv('../../dataset/cleaned-data/CyberU_reviews_cleaned.csv')\n",
+    "df = pd.read_csv('../../../dataset/cleaned-data/CyberU_reviews_cleaned.csv')\n",
     "\n",
     "# Konversi string representasi list menjadi list yang sebenarnya\n",
     "df['tokenized_text'] = df['tokenized_text'].apply(ast.literal_eval)"
